Feat: 09-10-2025 - Registro y listado de datos.
Registro y listado de datos con interacción de base de datos.

--- a/pom.xml
+++ b/pom.xml
@@ -10,4 +10,13 @@
         <maven.compiler.release>23</maven.compiler.release>
         <exec.mainClass>com.epiis.app.main.Main</exec.mainClass>
     </properties>
+    
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
+        <dependency>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.5.6</version>
+        </dependency>
+    </dependencies>
 </project>
