--- a/pom.xml
+++ b/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>3.5.6</version>
         </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
     </dependencies>
 </project>
